--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <img class="code-img" src="https://media.giphy.com/media/3bgcPpDaikspxiUHlH/giphy.gif" alt="code-img">
 
         <h3>Front-End</h3>
-        <p>.Html [HyperText Markup Language]
-        <p>.CSS [ Cascading Style Sheets] </p>
-        <p>.Bootstrap [Mobile] Jquery [library]  Javascript [Client-Side] </p>
+        <p>Html 5[HyperText Markup Language]
+        <p>CSS 3 [ Cascading Style Sheets] </p>
+        <p>Bootstrap 4[Mobile] Jquery [library]  </p>
+        <p>Javascript ES6[Client-Side] </p>
 
       </div>
 
@@ -52,8 +53,9 @@
         <h3>Back-End </h3>
         <p> programming languages and database:
         <p> Node.js & Express.js</p>
-        <p> .Python & .Django </p>
-        <p>.SQL</p>
+        <p> Python </p>
+        <p> Django </p>
+        <p>SQL</p>
 
       </div>
     </div>
