--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
         <p>Html 5[HyperText Markup Language]
         <p>CSS 3 [ Cascading Style Sheets] </p>
         <p>Bootstrap 4[Mobile] Jquery [library]  </p>
-        <p>Javascript ES6[Client-Side] </p>
+        <p>Javascript [Client-Side] </p>
 
       </div>
 
       <hr>
       <div class="skill-row">
-          <small> from Giphy</small>
         <img class="chilli-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
+        <small> from Giphy</small>
 
 
         <h3>Back-End </h3>
         <p> programming languages and database:
-        <p> Node.js & Express.js</p>
-        <p> Python </p>
-        <p> Django </p>
-        <p>SQL</p>
+        <p> Node JS </p>
+        <p>Express </p> 
+        <p>MongoDB </p>
+        <p>MySQ L</p>
 
       </div>
     </div>
