--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
         <img class="code-img" src="https://media.giphy.com/media/3bgcPpDaikspxiUHlH/giphy.gif" alt="code-img">
 
         <h3>Front-End</h3>
-        <p>Html 5[HyperText Markup Language]
-        <p>CSS 3 [ Cascading Style Sheets] </p>
-        <p>Bootstrap 4[Mobile] Jquery [library]  </p>
+        <p>Html 5[HyperText Markup Language]  and CSS 3 [ Cascading Style Sheets] </p>
+        <p>Bootstrap 4[Mobile] and Jquery [library]  </p>
         <p>Javascript [Client-Side] </p>
 
       </div>
 
       <hr>
       <div class="skill-row">
-        <img class="chilli-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
-        <small> from Giphy</small>
+        <div class = "continer">
+         <img class="chilli-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
+         <p><small>from Giphy</small></p>
+      </div>
 
 
         <h3>Back-End </h3>
