--- a/index.html
+++ b/index.html
@@ -34,22 +34,21 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="https://media.giphy.com/media/3bgcPpDaikspxiUHlH/giphy.gif" alt="code-img">
+          <img class="chilli-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
 
         <h3>Front-End</h3>
-        <p>Html 5[HyperText Markup Language]  and CSS 3 [ Cascading Style Sheets] </p>
-        <p>Bootstrap 4[Mobile] and Jquery [library]  </p>
-        <p>Javascript [Client-Side] </p>
+          <p>Html 5  and CSS 3 </p>
+          <p>Bootstrap 4 and Jquery [library]  </p>
+          <p>Javascript [Client-Side] </p>
+          <p>React</p>
+
+
 
       </div>
 
       <hr>
       <div class="skill-row">
-        <div class = "continer">
-         <img class="chilli-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
-         <p><small>from Giphy</small></p>
-      </div>
-
+        <img class="code-img" src="https://media.giphy.com/media/3bgcPpDaikspxiUHlH/giphy.gif" alt="code-img">
 
         <h3>Back-End </h3>
         <p> programming languages and database:
