--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-          <img class="chilli-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
+          <img class="cat-img" src="https://media.giphy.com/media/WQfOqmNxHLSdu258VJ/giphy.gif" alt="cat-img">
 
         <h3>Front-End</h3>
           <p>Html 5  and CSS 3 </p>
