--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img class="code-img" src="https://media.giphy.com/media/3bgcPpDaikspxiUHlH/giphy.gif" alt="code-img">
 
         <h3>Back-End </h3>
-        <p> programming languages and database:
+        <p>Command Line </p>
         <p> Node JS </p>
         <p>Express </p> 
         <p>MongoDB </p>
